[package]
name = "offregisters-lib"
version = "0.0.7"
authors = ["Samuel Marks @SamuelMarks"]
edition = "2018"

[dependencies]
mio = "0.6.16"
mio_httpc = { version = "0.8.6", features = ["native"] }
failure = "0.1.5"
url = "1.7.2"
lazy_static = "1.3.0"
tempfile = "3.0.7"
tar = "0.4.21"
flate2 = "1.0.6"
