[package]
name = "liboffregisters"
version = "0.0.7"
authors = ["Samuel Marks @SamuelMarks"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
mio = "0.6.16"
mio_httpc = { version = "0.8.6", features = ["native"] }
failure = "0.1.5"
url = "1.7.2"
lazy_static = "1.3.0"
tempfile = "3.0.7"
tar = "0.4.23"
flate2 = "1.0.7"
hyper = "0.12.27"
digest = "0.8.0"
sha2 = "0.8.0"
